refactor: update process and painel logic, remove obsolete tests, and refactor test assertions.