@@ -7,21 +7,26 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import sgc.alerta.Alerta;
-import sgc.alerta.AlertaRepo;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import sgc.alerta.AlertaFacade;
+import sgc.alerta.dto.AlertaDto;
+import sgc.alerta.model.Alerta;
 import sgc.organizacao.UnidadeFacade;
-import sgc.organizacao.UsuarioFacade;
-import sgc.organizacao.dto.UnidadeDto;
 import sgc.organizacao.model.Perfil;
+import sgc.processo.dto.ProcessoResumoDto;
 import sgc.processo.model.Processo;
-import sgc.processo.model.SituacaoProcesso;
 import sgc.processo.service.ProcessoFacade;
-import sgc.seguranca.acesso.AcessoContexto;
+import sgc.processo.model.SituacaoProcesso;
+import sgc.processo.model.TipoProcesso;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -32,72 +37,58 @@ class PainelFacadeCoverageTest {
     @InjectMocks
     private PainelFacade painelFacade;
 
-    @Mock private AlertaRepo alertaRepo;
+    @Mock private AlertaFacade alertaService;
     @Mock private ProcessoFacade processoFacade;
     @Mock private UnidadeFacade unidadeService;
-    @Mock private UsuarioFacade usuarioFacade;
 
     @Test
-    @DisplayName("Deve calcular link de destino para CHEFE sem unidade informada")
-    void deveCalcularLinkChefeSemUnidade() {
-        Processo p = new Processo();
-        p.setCodigo(1L);
-        p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
+    @DisplayName("Deve mapear AlertaDto corretamente")
+    void deveMapearAlertaDtoCorretamente() {
+        sgc.processo.model.Processo p = new sgc.processo.model.Processo();
+        p.setCodigo(55L);
         
-        when(processoFacade.listarAtivos()).thenReturn(List.of(p));
-        when(usuarioFacade.obterUsuarioAutenticadoOuNull()).thenReturn(null);
+        sgc.organizacao.model.Unidade origem = new sgc.organizacao.model.Unidade();
+        origem.setSigla("ORG");
         
-        AcessoContexto ctx = AcessoContexto.builder()
-                .perfil(Perfil.CHEFE)
-                .unidadesPossiveis(Collections.emptySet())
-                .build();
-        
-        List<PainelGlobalDto.ProcessoAtivoDto> result = painelFacade.obterDadosPainelGlobal(ctx).processos();
-        
-        assertThat(result).hasSize(1);
-        // Sem unidade e perfil CHEFE -> cai na linha 231
-        assertThat(result.get(0).link()).isEqualTo("/processo/1");
-    }
+        sgc.organizacao.model.Unidade destino = new sgc.organizacao.model.Unidade();
+        destino.setSigla("DST");
 
-    @Test
-    @DisplayName("Deve lidar com erro ao buscar unidade no calculo do link")
-    void deveLidarComErroBuscaUnidadeNoLink() {
-       Processo p = new Processo();
-        p.setCodigo(1L);
-        p.setSituacao(SituacaoProcesso.EM_ANDAMENTO);
-        
-        when(processoFacade.listarAtivos()).thenReturn(List.of(p));
-        when(unidadeService.buscarPorCodigo(99L)).thenThrow(new RuntimeException("Erro"));
-        
-        AcessoContexto ctx = AcessoContexto.builder()
-                .perfil(Perfil.CHEFE)
-                .codigoUnidadeNoContexto(99L)
-                .unidadesPossiveis(Collections.singleton(99L))
-                .build();
-        
-        List<PainelGlobalDto.ProcessoAtivoDto> result = painelFacade.obterDadosPainelGlobal(ctx).processos();
-        
-        assertThat(result.get(0).link()).isNull(); // Linha 228
-    }
-
-    @Test
-    @DisplayName("Deve cobrir nulos no mapeamento de AlertaDto")
-    void deveCobrirNulosNoAlertaDto() {
         Alerta a = new Alerta();
         a.setCodigo(100L);
         a.setDescricao("D");
-        a.setUnidadeOrigem(null);
-        a.setUnidadeDestino(null);
-        a.setProcesso(null);
+        a.setUnidadeOrigem(origem);
+        a.setUnidadeDestino(destino);
+        a.setProcesso(p);
 
-        when(alertaRepo.buscarAlertasNaoLidos(anyString())).thenReturn(List.of(a));
+        Pageable pageable = PageRequest.of(0, 10);
+        when(alertaService.listarPorUnidade(eq(1L), any())).thenReturn(new PageImpl<>(List.of(a)));
+        when(alertaService.obterDataHoraLeitura(anyLong(), anyString())).thenReturn(Optional.empty());
+
+        Page<AlertaDto> result = painelFacade.listarAlertas("T", 1L, pageable);
+
+        assertThat(result.getContent()).hasSize(1);
+        assertThat(result.getContent().getFirst().getUnidadeOrigem()).isEqualTo("ORG");
+        assertThat(result.getContent().getFirst().getUnidadeDestino()).isEqualTo("DST");
+        assertThat(result.getContent().getFirst().getCodProcesso()).isEqualTo(55L);
+    }
+
+    @Test
+    @DisplayName("Deve calcular link para ADMIN e processo CRIADO")
+    void deveCalcularLinkAdminCriado() {
+        Processo p = new Processo();
+        p.setCodigo(10L);
+        p.setSituacao(SituacaoProcesso.CRIADO);
+        p.setTipo(TipoProcesso.MAPEAMENTO); // Inicializando tipo para evitar NPE se mapper usar
         
-        AcessoContexto ctx = AcessoContexto.builder().tituloUsuario("T").build();
-        List<AlertaDto> result = painelFacade.obterAlertasNaoLidos(ctx);
+        sgc.organizacao.model.Unidade u = new sgc.organizacao.model.Unidade();
+        u.setCodigo(1L);
+        u.setSigla("U1");
+        u.setNome("Unidade 1");
+        p.getParticipantes().add(u);
+        
+        when(processoFacade.listarTodos(any())).thenReturn(new PageImpl<>(List.of(p)));
 
-        assertThat(result).hasSize(1);
-        assertThat(result.get(0).unidadeOrigem()).isNull();
-        assertThat(result.get(0).unidadeDestino()).isNull();
-        assertThat(result.get(0).codProcesso()).isNull();
+        Page<ProcessoResumoDto> result = painelFacade.listarProcessos(Perfil.ADMIN, null, PageRequest.of(0, 10));
+        assertThat(result.getContent().getFirst().linkDestino()).isEqualTo("/processo/cadastro?codProcesso=10");
     }
 }
